15 December 2011: Wouter
	- remove uninit warning from cachedump code.

13 December 2011: Wouter
	- iana portlist updated.
	- svn tag 1.4.14rc1
	- fix infra cache comparison.
	- Fix to constrain signer_name to be a parent of the lookupname.

5 December 2011: Wouter
	- Fix getaddrinfowithincludes on windows with fedora16 mingw32-gcc.
	- Fix warnings with gcc 4.6 in compat/inet_ntop.c.
	- Fix warning unused in compat/strptime.c.
	- Fix malloc detection and double defintion.

2 December 2011: Wouter
	- configure generated with autoconf 2.68.

30 November 2011: Wouter
	- Fix for tcp-upstream and ssl-upstream for if a laptop sleeps, causes
	  SERVFAILs.  Also fixed for UDP (but less likely).

28 November 2011: Wouter
	- Fix quartile time estimate, it was too low, (thanks Jan Komissar).
	- iana ports updated.

11 November 2011: Wouter
	- Makefile compat with SunOS make, BSD make and GNU make.
	- iana ports updated.

10 November 2011: Wouter
	- Makefile changed for BSD make compatibility.

9 November 2011: Wouter
	- added unit test for SSL service and SSL-upstream.

8 November 2011: Wouter
	- can configure ssl service to one port number, and not on others.
	- fixup windows compile with ssl support.
	- Fix double free in unbound-host, reported by Steve Grubb.
	- iana portlist updated.

1 November 2011: Wouter
	- dns over ssl support as a client, ssl-upstream yes turns it on.
	  It performs an SSL transaction for every DNS query (250 msec).
	- documentation for new options: ssl-upstream, ssl-service-key and
	  ssl-service.pem.
	- iana portlist updated.
	- fix -flto detection on Lion for llvm-gcc.

31 October 2011: Wouter
	- dns over ssl support, ssl-service-pem and ssl-service-key files
	  can be given and then TCP queries are serviced wrapped in SSL.

27 October 2011: Wouter
	- lame-ttl and lame-size options no longer exist, it is integrated
	  with the host info.  They are ignored (with verbose warning) if
	  encountered to keep the config file backwards compatible.